# axon0

./: .gitignore  AXON0_STATUS_FOR_VEYR.md  CLAUDE.md  COMMIT_MSG.txt  Cargo.toml  LICENSE  README.md  SESSION_2024_12_01.md  axon0_bin_bells_dump.rs  axon0_bin_bells_gen.rs  axon0_bin_demo_accept.rs  axon0_bin_demo_init.rs  axon0_doc_spec_protocol.md  axon0_lib.rs  axon0_lib_bell.rs  axon0_lib_bell_file.rs  axon0_lib_conn.rs  axon0_lib_frame.rs  axon0_lib_handshake.rs  axon0_lib_hlc.rs  axon0_lib_io.rs  axon0_lib_song.rs  axon0_lib_tlv.rs  axon0_spec_handshake.md
src/: frame.rs  lib.rs  song.rs
