[package]
name = "axon0"
version = "0.1.0"
edition = "2021"

[lib]
path = "axon0_lib.rs"

[[bin]]
name = "axon0-demo-accept"
path = "axon0_bin_demo_accept.rs"

[[bin]]
name = "axon0-demo-init"
path = "axon0_bin_demo_init.rs"

[[bin]]
name = "axon0-bells-dump"
path = "axon0_bin_bells_dump.rs"

[[bin]]
name = "axon0-bells-gen"
path = "axon0_bin_bells_gen.rs"

[dependencies]
blake3 = "1.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
